<resources>
    <string name="app_name">SubmissionJetpack</string>
    <string name="movie">Movies</string>
    <string name="tv_series">TV Series</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="studio">Studio</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="detail">Detail</string>
    <string name="overview">Overview</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tvseries">Detail Tv Series</string>
    <string name="spalshscreen">spalshscreen</string>
    <string name="studio_movie">Studio Movie</string>
    <string name="img_detail">Img Detail</string>
</resources>